--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
     <div class="big-content">
       <div class="big-content1">
-        <div class="iphone">
+        <div class="iphone iphone1">
           <div class="iphone-txt">
             <div class="iphone-txt1">Iphone 16 Pro</div>
             <div class="iphone-txt2">Hello, Apple Intelligence.</div>
@@ -64,7 +64,7 @@
         </div>
       </div>
       <div class="big-content3">
-        <div class="iphone">
+        <div class="iphone iphone3">
           <div class="iphone-txt">
             <div class="iphone3-txt1">Gift magic.</div>
             <div class="iphone3-txt2">Make their holiday whish come true.</div>
@@ -73,5 +73,6 @@
         </div>
       </div>
     </div>
+    <div class="wrap-content"></div>
   </body>
 </html>
