--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <title>Apple web</title>
   </head>
   <body>
+    <!-- NAVIGATION -->
     <div class="nav">
       <img src="./images/applelogo.svg" alt="" />
       <div class="nav-menu">
@@ -38,6 +39,7 @@
       We’re donating $5 to the Global Fund for every purchase made with
       Apple Pay at Apple. Through 12/8.
     </div>
+    <!-- TOM CONTEENT -->
     <div class="big-content">
       <div class="big-content1">
         <div class="iphone iphone1">
@@ -73,6 +75,131 @@
         </div>
       </div>
     </div>
-    <div class="wrap-content"></div>
+    <!-- GRIP -->
+    <div class="small-container">
+      <div class="small">
+        <div class="small-content1 small-pic">
+          <div class="small-txt">
+            <div class="small1-txt1"></div>
+            <div class="small-txt2 small-txt2-1">
+              Two sizes. Faster chip. Does it all.
+            </div>
+          </div>
+          <div class="small-button">
+            <div class="small-button1">Learn more</div>
+            <div class="small-button2">Buy</div>
+          </div>
+          <div class="color-txt">Hello, Apple Intelligence.</div>
+        </div>
+        <div class="small-content2 small-pic">
+          <div class="small2-txt">
+            <div class="small-txt1 small2-color">AirPods 2 Pro</div>
+            <div class="small-txt2 small2-color">
+              Now with a Hearing aid feature 2
+            </div>
+          </div>
+          <div class="small-button">
+            <div class="small-button1">Learn more</div>
+            <div class="small-button2">Buy</div>
+          </div>
+        </div>
+      </div>
+      <div class="small">
+        <div class="small-content3 small-pic">
+          <div class="small-txt">
+            <div class="small3-txt1">
+              <div class="small3-watch1">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="27"
+                  height="32"
+                  viewBox="0 0 27 32"
+                  fill="none"
+                >
+                  <path
+                    d="M25.5137 10.9076C24.4555 11.548 23.579 12.4433 22.9662 13.5098C22.3534 14.5762 22.0243 15.7789 22.0097 17.0053C22.0139 18.3855 22.4276 19.7343 23.1996 20.8844C23.9716 22.0346 25.068 22.9357 26.3529 23.476C25.8463 25.0917 25.0965 26.6228 24.1288 28.0179C22.7441 29.9883 21.2963 31.9584 19.0933 31.9584C16.8903 31.9584 16.3237 30.6933 13.7849 30.6933C11.3091 30.6933 10.4278 32 8.41356 32C6.3993 32 4.99369 30.1748 3.37802 27.935C1.24384 24.7972 0.0709201 21.1174 0 17.337C0 11.1151 4.09149 7.81756 8.1198 7.81756C10.26 7.81756 12.0435 9.20697 13.3863 9.20697C14.6662 9.20697 16.6595 7.73443 19.0933 7.73443C20.3446 7.70252 21.5847 7.97524 22.7043 8.5286C23.824 9.08195 24.7887 9.89895 25.5137 10.9076ZM17.9394 5.10059C19.0122 3.85308 19.6195 2.27946 19.6599 0.642594C19.6617 0.426807 19.6406 0.211429 19.5969 0C17.754 0.177946 16.0499 1.04617 14.834 2.4266C13.7508 3.6244 13.1206 5.156 13.0505 6.7611C13.0513 6.9563 13.0724 7.1509 13.1135 7.34184C13.2588 7.36899 13.4063 7.3829 13.5541 7.38341C14.4035 7.31661 15.2302 7.07979 15.984 6.68736C16.7379 6.29492 17.4031 5.75506 17.9394 5.10059Z"
+                    fill="black"
+                    fill-opacity="0.8"
+                  />
+                </svg>
+                <div class="small3-watch1txt">WATCH</div>
+              </div>
+              <div class="small3-watch2">SERIES 10</div>
+            </div>
+            <div class="small-txt2">Thinstant classic</div>
+          </div>
+          <div class="small-button">
+            <div class="small-button1">Learn more</div>
+            <div class="small-button2">Buy</div>
+          </div>
+        </div>
+        <div class="small-content4 small-pic">
+          <div class="small-txt">
+            <div class="small-txt1">Macbook Air</div>
+            <div class="small-txt2">Lean. Mean. M3 machine.</div>
+          </div>
+          <div class="small-button">
+            <div class="small-button1">Learn more</div>
+            <div class="small-button2">Buy</div>
+          </div>
+        </div>
+      </div>
+      <div class="small">
+        <div class="small-content5 small-pic">
+          <div class="small-txt">
+            <div class="small3-watch1">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="27"
+                height="32"
+                viewBox="0 0 27 32"
+                fill="none"
+              >
+                <path
+                  d="M25.5137 10.9076C24.4555 11.548 23.579 12.4433 22.9662 13.5098C22.3534 14.5762 22.0243 15.7789 22.0097 17.0053C22.0139 18.3855 22.4276 19.7343 23.1996 20.8844C23.9716 22.0346 25.068 22.9357 26.3529 23.476C25.8463 25.0917 25.0965 26.6228 24.1288 28.0179C22.7441 29.9883 21.2963 31.9584 19.0933 31.9584C16.8903 31.9584 16.3237 30.6933 13.7849 30.6933C11.3091 30.6933 10.4278 32 8.41356 32C6.3993 32 4.99369 30.1748 3.37802 27.935C1.24384 24.7972 0.0709201 21.1174 0 17.337C0 11.1151 4.09149 7.81756 8.1198 7.81756C10.26 7.81756 12.0435 9.20697 13.3863 9.20697C14.6662 9.20697 16.6595 7.73443 19.0933 7.73443C20.3446 7.70252 21.5847 7.97524 22.7043 8.5286C23.824 9.08195 24.7887 9.89895 25.5137 10.9076ZM17.9394 5.10059C19.0122 3.85308 19.6195 2.27946 19.6599 0.642594C19.6617 0.426807 19.6406 0.211429 19.5969 0C17.754 0.177946 16.0499 1.04617 14.834 2.4266C13.7508 3.6244 13.1206 5.156 13.0505 6.7611C13.0513 6.9563 13.0724 7.1509 13.1135 7.34184C13.2588 7.36899 13.4063 7.3829 13.5541 7.38341C14.4035 7.31661 15.2302 7.07979 15.984 6.68736C16.7379 6.29492 17.4031 5.75506 17.9394 5.10059Z"
+                  fill="black"
+                  fill-opacity="0.8"
+                />
+              </svg>
+              <div class="small3-watch1txt">Trade In</div>
+            </div>
+            <div class="small3-txt2">
+              Get $180–$650 in credit when you trade in iPhone 12 or higher.3
+            </div>
+          </div>
+          <div class="small-button">
+            <div class="small-button1">Get your estimate</div>
+          </div>
+        </div>
+        <div class="small-content6 small-pic">
+          <div class="small-txt">
+            <div class="small3-watch1">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="27"
+                height="32"
+                viewBox="0 0 27 32"
+                fill="none"
+              >
+                <path
+                  d="M25.5137 10.9076C24.4555 11.548 23.579 12.4433 22.9662 13.5098C22.3534 14.5762 22.0243 15.7789 22.0097 17.0053C22.0139 18.3855 22.4276 19.7343 23.1996 20.8844C23.9716 22.0346 25.068 22.9357 26.3529 23.476C25.8463 25.0917 25.0965 26.6228 24.1288 28.0179C22.7441 29.9883 21.2963 31.9584 19.0933 31.9584C16.8903 31.9584 16.3237 30.6933 13.7849 30.6933C11.3091 30.6933 10.4278 32 8.41356 32C6.3993 32 4.99369 30.1748 3.37802 27.935C1.24384 24.7972 0.0709201 21.1174 0 17.337C0 11.1151 4.09149 7.81756 8.1198 7.81756C10.26 7.81756 12.0435 9.20697 13.3863 9.20697C14.6662 9.20697 16.6595 7.73443 19.0933 7.73443C20.3446 7.70252 21.5847 7.97524 22.7043 8.5286C23.824 9.08195 24.7887 9.89895 25.5137 10.9076ZM17.9394 5.10059C19.0122 3.85308 19.6195 2.27946 19.6599 0.642594C19.6617 0.426807 19.6406 0.211429 19.5969 0C17.754 0.177946 16.0499 1.04617 14.834 2.4266C13.7508 3.6244 13.1206 5.156 13.0505 6.7611C13.0513 6.9563 13.0724 7.1509 13.1135 7.34184C13.2588 7.36899 13.4063 7.3829 13.5541 7.38341C14.4035 7.31661 15.2302 7.07979 15.984 6.68736C16.7379 6.29492 17.4031 5.75506 17.9394 5.10059Z"
+                  fill="black"
+                  fill-opacity="0.8"
+                />
+              </svg>
+              <div class="small3-watch1txt">Card</div>
+            </div>
+            <div class="small3-txt2">
+              Get up to 3% Daily Cash back with every purchase.
+            </div>
+          </div>
+          <div class="small-button">
+            <div class="small-button1">Learn more</div>
+            <div class="small-button2">Buy</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- MOVIE SCROLL -->
   </body>
 </html>
