--- a/store.html
+++ b/store.html
@@ -66,8 +66,8 @@
           </div>
         </div>
       </div>
-      <div class="top3">
-        <div class="top3-item">
+      <div class="top3 scroll-jijig">
+        <div class="top3-item scroll-jijig-zuun">
           <img class="top3-img" src="./images2/top3-1.png" alt="" />
           <div class="top3-txt">Mac</div>
         </div>
@@ -107,14 +107,14 @@
           <img class="top3-img" src="./images2/top3-10.png" alt="" />
           <div class="top3-txt">Accessories</div>
         </div>
-        <div class="top3-item">
+        <div class="top3-item scroll-jijig-baruun">
           <img class="top3-img" src="./images2/top3-11.png" alt="" />
           <div class="top3-txt">Apple Gift Card</div>
         </div>
       </div>
     </div>
     <div class="main">
-      <div class="section1">
+      <div class="section">
         <div class="title">
           <div class="title1">The latest.</div>
           <div class="title2">All-new and lovable.</div>
@@ -194,12 +194,36 @@
           </div>
         </div>
       </div>
-      <div class="section2"></div>
-      <div class="section3"></div>
-      <div class="section4"></div>
-      <div class="section5"></div>
-      <div class="section6"></div>
-      <div class="section7"></div>
+      <div class="section">
+        <div class="title">
+          <div class="title1">Personalization.</div>
+          <div class="title2">Let them unwrap wonders.</div>
+        </div>
+        <div class="scroll">
+          <div class="sec2-item sec2-1">
+            <div class="sec2-1txt1">FREE ENGRAVING</div>
+            <div class="sec2-1txt2">Make an impression</div>
+          </div>
+          <div class="sec2-item">
+            <img class="sec2-2" src="./images2/sec2-2.jpg" alt="" />
+            <div class="circle-color"></div>
+            <div class="sec2-txt1">Free Engraving</div>
+            <div class="sec2-txt2">AirPods 4</div>
+            <div class="sec2-txt3">$129.00</div>
+          </div>
+          <div class="sec2-item"></div>
+          <div class="sec2-item"></div>
+          <div class="sec2-item"></div>
+          <div class="sec2-item"></div>
+          <div class="sec2-item"></div>
+          <div class="sec2-item"></div>
+        </div>
+      </div>
+      <div class="section"></div>
+      <div class="section"></div>
+      <div class="section"></div>
+      <div class="section"></div>
+      <div class="section"></div>
     </div>
   </body>
 </html>
