--- a/store.html
+++ b/store.html
@@ -211,16 +211,196 @@
             <div class="sec2-txt2">AirPods 4</div>
             <div class="sec2-txt3">$129.00</div>
           </div>
-          <div class="sec2-item"></div>
-          <div class="sec2-item"></div>
-          <div class="sec2-item"></div>
-          <div class="sec2-item"></div>
-          <div class="sec2-item"></div>
-          <div class="sec2-item"></div>
+          <div class="sec2-item">
+            <img class="sec2-3" src="./images2/sec2-3.jpg" alt="" />
+            <div class="circle-color">
+              <img class="circle" src="./images2/circle/1-1.png" alt="" />
+              <img class="circle" src="./images2/circle/1-2.png" alt="" />
+              <img class="circle" src="./images2/circle/1-3.png" alt="" />
+              <img class="circle" src="./images2/circle/1-4.png" alt="" />
+            </div>
+            <div class="sec2-txt1"></div>
+            <div class="sec2-txt2">iPad</div>
+            <div class="sec2-txt3">From $349 or 29.08/mo. for 12 mo.</div>
+          </div>
+          <div class="sec2-item">
+            <img class="sec2-2" src="./images2/sec2-4.jpg" alt="" />
+            <div class="circle-color"></div>
+            <div class="sec2-txt1">New</div>
+            <div class="sec2-txt2">AirTag</div>
+            <div class="sec2-txt3">$29.00</div>
+          </div>
+          <div class="sec2-item">
+            <img class="sec2-2" src="./images2/sec2-5.jpg" alt="" />
+            <div class="circle-color"></div>
+            <div class="sec2-txt1">Free Engraving</div>
+            <div class="sec2-txt2">Apple Pencil Pro</div>
+            <div class="sec2-txt3">$129.00</div>
+          </div>
+          <div class="sec2-item">
+            <img class="sec2-3" src="./images2/sec2-6.jpg" alt="" />
+            <div class="circle-color">
+              <img class="circle" src="./images2/circle/2-1.png" alt="" />
+              <img class="circle" src="./images2/circle/2-2.png" alt="" />
+              <img class="circle" src="./images2/circle/2-1.png" alt="" />
+              <img class="circle" src="./images2/circle/2-4.png" alt="" />
+              <img class="circle" src="./images2/circle/2-5.png" alt="" />
+            </div>
+            <div class="sec2-txt1">Free Engraving</div>
+            <div class="sec2-txt2">AirPods Max - Starlight</div>
+            <div class="sec2-txt3">$549.00</div>
+          </div>
+          <div class="sec2-item">
+            <img class="sec2-3" src="./images2/sec2-7.jpg" alt="" />
+            <div class="circle-color">
+              <img class="circle" src="./images2/circle/3-1.png" alt="" />
+              <img class="circle" src="./images2/circle/3-2.png" alt="" />
+              <img class="circle" src="./images2/circle/3-3.png" alt="" />
+              <img class="circle" src="./images2/circle/3-4.png" alt="" />
+            </div>
+            <div class="sec2-txt1"></div>
+            <div class="sec2-txt2">11-inch iPad Air</div>
+            <div class="sec2-txt3">From $599 or 49.91/mo. for 12 mo.</div>
+          </div>
+          <div class="sec2-item sec2-4">
+            <img class="sec2-3" src="./images2/sec2-8.jpg" alt="" />
+            <div class="circle-color"></div>
+            <div class="sec2-txt1">Free Engraving</div>
+            <div class="sec2-txt2">AirPods Pro 3</div>
+            <div class="sec2-txt3">$249.00</div>
+          </div>
         </div>
       </div>
-      <div class="section"></div>
-      <div class="section"></div>
+      <div class="section">
+        <div class="title">
+          <div class="title1">Holiday Picks.</div>
+          <div class="title2">Add more magic to the moment.</div>
+        </div>
+        <div class="scroll">
+          <div class="sec2-item sec4-1">
+            <div class="sec2-1txt1">ACCESSORIES</div>
+            <div class="sec2-1txt2">
+              Don’t wait to find their perfect match.
+            </div>
+          </div>
+          <div class="sec2-item">
+            <img class="sec2-2" src="./images2/sec4-2.jpeg" alt="" />
+            <div class="circle-color">
+              <img class="circle" src="./images2/circle/1-1.png" alt="" />
+              <img class="circle" src="./images2/circle/1-2.png" alt="" />
+              <img class="circle" src="./images2/circle/1-3.png" alt="" />
+            </div>
+            <div class="sec2-txt1"></div>
+            <div class="sec2-txt2">
+              Beats Pill — Wireless Bluetooth® Speaker — ...
+            </div>
+            <div class="sec2-txt3">$149.00</div>
+          </div>
+          <div class="sec2-item">
+            <img class="sec2-2" src="./images2/sec4-3.jpeg" alt="" />
+            <div class="circle-color">
+              <img class="circle" src="./images2/circle/1-1.png" alt="" />
+              <img class="circle" src="./images2/circle/1-2.png" alt="" />
+              <img class="circle" src="./images2/circle/1-3.png" alt="" />
+              <img class="circle" src="./images2/circle/1-4.png" alt="" />
+              <img class="circle" src="./images2/circle/3-1.png" alt="" />
+            </div>
+            <div class="sec2-txt1"></div>
+            <div class="sec2-txt2">
+              iPhone 17 Pro TechWoven Case with MagSafe – Sienna
+            </div>
+            <div class="sec2-txt3">$59.00</div>
+          </div>
+          <div class="sec2-item">
+            <img class="sec2-2" src="./images2/sec4-4.jpeg" alt="" />
+            <div class="circle-color">
+              <img class="circle" src="./images2/circle/1-1.png" alt="" />
+              <img class="circle" src="./images2/circle/1-2.png" alt="" />
+              <img class="circle" src="./images2/circle/1-3.png" alt="" />
+              <img class="circle" src="./images2/circle/1-4.png" alt="" />
+              <img class="circle" src="./images2/circle/3-1.png" alt="" />
+              <img class="circle" src="./images2/circle/3-2.png" alt="" />
+              <img class="circle" src="./images2/circle/3-2.png" alt="" />
+            </div>
+            <div class="sec2-txt1"></div>
+            <div class="sec2-txt2">Crossbody Strap – Sienna</div>
+            <div class="sec2-txt3">$59.00</div>
+          </div>
+          <div class="sec2-item">
+            <img class="sec2-2" src="./images2/sec2-2.jpg" alt="" />
+            <div class="circle-color"></div>
+            <div class="sec2-txt1">Free Engraving</div>
+            <div class="sec2-txt2">AirPods 4</div>
+            <div class="sec2-txt3">$129.00</div>
+          </div>
+          <div class="sec2-item">
+            <img class="sec2-3" src="./images2/sec2-3.jpg" alt="" />
+            <div class="circle-color">
+              <img class="circle" src="./images2/circle/1-1.png" alt="" />
+              <img class="circle" src="./images2/circle/1-2.png" alt="" />
+              <img class="circle" src="./images2/circle/1-3.png" alt="" />
+              <img class="circle" src="./images2/circle/1-4.png" alt="" />
+            </div>
+            <div class="sec2-txt1"></div>
+            <div class="sec2-txt2">iPad</div>
+            <div class="sec2-txt3">From $349 or 29.08/mo. for 12 mo.</div>
+          </div>
+        </div>
+      </div>
+      <div class="section">
+        <div class="title">
+          <div class="title1">Help is here.</div>
+          <div class="title2">Whenever and however you need it.</div>
+        </div>
+        <div class="scroll">
+          <div class="sec3-item sec3-1">
+            <div class="sec3-txt1">APPLE SPECIALIST</div>
+            <div class="sec3-txt2">
+              Shop one on one with a Specialist. Online or in a store.
+            </div>
+            <div class="sec3-txt3"></div>
+          </div>
+          <div class="sec3-item sec3-2">
+            <div class="sec3-txt1"></div>
+            <div class="sec3-txt2">Shop with a Specialist over video.</div>
+            <div class="sec3-txt3">
+              Choose your next device in a guided, one-way video session.
+            </div>
+          </div>
+          <div class="sec3-item sec3-3">
+            <div class="sec3-txt1">TODAY AT APPLE</div>
+            <div class="sec3-txt2">Explore Apple Intelligence</div>
+            <div class="sec3-txt3">
+              Come try it for yourself in a free session at the Apple Store.
+            </div>
+          </div>
+          <div class="sec3-item sec3-4">
+            <div class="sec3-txt1">TODAY AT APPLE</div>
+            <div class="sec3-txt2">Join free sessions at your Apple Store.</div>
+            <div class="sec3-txt3">
+              Learn about the latest features and how to go further with your
+              Apple devices.
+            </div>
+          </div>
+          <div class="sec3-item sec3-5">
+            <div class="sec3-txt1">PERSONAL SETUP</div>
+            <div class="sec3-txt2">
+              Set up your new device with help from a Specialist.
+            </div>
+            <div class="sec3-txt3">
+              Let us guide you through data transfer, the latest features, and
+              more in an online, one-on-one session.
+            </div>
+          </div>
+          <div class="sec3-item sec3-6">
+            <div class="sec3-txt1"></div>
+            <div class="sec3-txt2">
+              Get expert service and support at the Genius Bar.
+            </div>
+            <div class="sec3-txt3"></div>
+          </div>
+        </div>
+      </div>
       <div class="section"></div>
       <div class="section"></div>
       <div class="section"></div>
