--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="nav">
       <img src="./images/applelogo.svg" alt="" />
       <div class="nav-menu">
-        <div>Store</div>
+        <a href="./store.html"><div>Store</div></a>
         <div>Mac</div>
         <div>Ipad</div>
         <div>Iphone</div>
@@ -31,7 +31,7 @@
       </div>
       <div class="icons">
         <img src="./images/search.svg" alt="" />
-        <img src="./images/store.svg" alt="" />
+        <a href="./store.html"><img src="./images/store.svg" alt="" /></a>
         <img class="burger" src="./images/burger menu.svg" alt="" />
       </div>
     </div>
