--- a/store.html
+++ b/store.html
@@ -17,7 +17,7 @@
     <div class="top">
       <div class="top1">
         <div class="nav">
-          <img src="./images/applelogo.svg" alt="" />
+          <a href="./index.html"><img src="./images/applelogo.svg" alt="" /></a>
           <div class="nav-menu">
             <div>Store</div>
             <div>Mac</div>
@@ -284,20 +284,7 @@
             </div>
           </div>
           <div class="sec2-item">
-            <img class="sec2-2" src="./images2/sec4-2.jpeg" alt="" />
-            <div class="circle-color">
-              <img class="circle" src="./images2/circle/1-1.png" alt="" />
-              <img class="circle" src="./images2/circle/1-2.png" alt="" />
-              <img class="circle" src="./images2/circle/1-3.png" alt="" />
-            </div>
-            <div class="sec2-txt1"></div>
-            <div class="sec2-txt2">
-              Beats Pill — Wireless Bluetooth® Speaker — ...
-            </div>
-            <div class="sec2-txt3">$149.00</div>
-          </div>
-          <div class="sec2-item">
-            <img class="sec2-2" src="./images2/sec4-3.jpeg" alt="" />
+            <img class="sec2-3" src="./images2/sec4-2.jpg" alt="" />
             <div class="circle-color">
               <img class="circle" src="./images2/circle/1-1.png" alt="" />
               <img class="circle" src="./images2/circle/1-2.png" alt="" />
@@ -307,12 +294,12 @@
             </div>
             <div class="sec2-txt1"></div>
             <div class="sec2-txt2">
-              iPhone 17 Pro TechWoven Case with MagSafe – Sienna
+              iPhone 17 Pro Max TechWoven Case with MagSafe – Blue
             </div>
             <div class="sec2-txt3">$59.00</div>
           </div>
           <div class="sec2-item">
-            <img class="sec2-2" src="./images2/sec4-4.jpeg" alt="" />
+            <img class="sec2-3" src="./images2/sec4-3.jpg" alt="" />
             <div class="circle-color">
               <img class="circle" src="./images2/circle/1-1.png" alt="" />
               <img class="circle" src="./images2/circle/1-2.png" alt="" />
@@ -320,21 +307,59 @@
               <img class="circle" src="./images2/circle/1-4.png" alt="" />
               <img class="circle" src="./images2/circle/3-1.png" alt="" />
               <img class="circle" src="./images2/circle/3-2.png" alt="" />
-              <img class="circle" src="./images2/circle/3-2.png" alt="" />
             </div>
             <div class="sec2-txt1"></div>
-            <div class="sec2-txt2">Crossbody Strap – Sienna</div>
+            <div class="sec2-txt2">
+              iPhone 17 Pro Silicone Case with MagSafe – Orange
+            </div>
+            <div class="sec2-txt3">$49.00</div>
+          </div>
+          <div class="sec2-item">
+            <img class="sec2-3" src="./images2/sec4-4.jpg" alt="" />
+            <div class="circle-color">
+              <img class="circle" src="./images2/circle/1-1.png" alt="" />
+            </div>
+            <div class="sec2-txt1"></div>
+            <div class="sec2-txt2">
+              42mm Black Unity Braided Solo Loop - Unity Connection -...
+            </div>
             <div class="sec2-txt3">$59.00</div>
           </div>
           <div class="sec2-item">
-            <img class="sec2-2" src="./images2/sec2-2.jpg" alt="" />
+            <img class="sec2-3" src="./images2/sec4-5.jpg" alt="" />
             <div class="circle-color"></div>
-            <div class="sec2-txt1">Free Engraving</div>
-            <div class="sec2-txt2">AirPods 4</div>
-            <div class="sec2-txt3">$129.00</div>
+            <div class="sec2-txt1">New</div>
+            <div class="sec2-txt2">AirTag</div>
+            <div class="sec2-txt3">$29.00</div>
           </div>
           <div class="sec2-item">
-            <img class="sec2-3" src="./images2/sec2-3.jpg" alt="" />
+            <img class="sec2-3" src="./images2/sec4-6.jpg" alt="" />
+            <div class="circle-color">
+              <img class="circle" src="./images2/circle/1-1.png" alt="" />
+              <img class="circle" src="./images2/circle/1-2.png" alt="" />
+            </div>
+            <div class="sec2-txt1"></div>
+            <div class="sec2-txt2">
+              Magic Keyboard for iPad Air 13‑inch (M3) - US English -...
+            </div>
+            <div class="sec2-txt3">$319</div>
+          </div>
+          <div class="sec2-item">
+            <img class="sec2-3" src="./images2/sec4-7.jpg" alt="" />
+            <div class="circle-color">
+              <img class="circle" src="./images2/circle/1-1.png" alt="" />
+              <img class="circle" src="./images2/circle/1-2.png" alt="" />
+              <img class="circle" src="./images2/circle/1-3.png" alt="" />
+              <img class="circle" src="./images2/circle/1-4.png" alt="" />
+              <img class="circle" src="./images2/circle/3-1.png" alt="" />
+              <img class="circle" src="./images2/circle/3-2.png" alt="" />
+            </div>
+            <div class="sec2-txt1"></div>
+            <div class="sec2-txt2">Crossbody Strap – Light Blue</div>
+            <div class="sec2-txt3">$59.00</div>
+          </div>
+          <div class="sec2-item">
+            <img class="sec2-3" src="./images2/sec4-8.jpg" alt="" />
             <div class="circle-color">
               <img class="circle" src="./images2/circle/1-1.png" alt="" />
               <img class="circle" src="./images2/circle/1-2.png" alt="" />
@@ -342,8 +367,64 @@
               <img class="circle" src="./images2/circle/1-4.png" alt="" />
             </div>
             <div class="sec2-txt1"></div>
-            <div class="sec2-txt2">iPad</div>
-            <div class="sec2-txt3">From $349 or 29.08/mo. for 12 mo.</div>
+            <div class="sec2-txt2">iPhone Air Bumper – Light Blue</div>
+            <div class="sec2-txt3">$39.00</div>
+          </div>
+          <div class="sec2-item">
+            <img class="sec2-3" src="./images2/sec4-9.jpg" alt="" />
+            <div class="circle-color">
+              <img class="circle" src="./images2/circle/1-1.png" alt="" />
+              <img class="circle" src="./images2/circle/1-2.png" alt="" />
+              <img class="circle" src="./images2/circle/1-3.png" alt="" />
+              <img class="circle" src="./images2/circle/1-4.png" alt="" />
+              <img class="circle" src="./images2/circle/3-1.png" alt="" />
+              <img class="circle" src="./images2/circle/3-2.png" alt="" />
+            </div>
+            <div class="sec2-txt1"></div>
+            <div class="sec2-txt2">46mm Anchor Blue Sport Band - M/L</div>
+            <div class="sec2-txt3">$49.00</div>
+          </div>
+          <div class="sec2-item">
+            <img class="sec2-3" src="./images2/sec4-10.jpg" alt="" />
+            <div class="circle-color"></div>
+            <div class="sec2-txt1"></div>
+            <div class="sec2-txt2">iPhone Air MagSafe Battery</div>
+            <div class="sec2-txt3">$99.00</div>
+          </div>
+          <div class="sec2-item">
+            <img class="sec2-3" src="./images2/sec4-11.jpg" alt="" />
+            <div class="circle-color"></div>
+            <div class="sec2-txt1"></div>
+            <div class="sec2-txt2">MagSafe Charger (1 m)</div>
+            <div class="sec2-txt3">$39.00</div>
+          </div>
+          <div class="sec2-item">
+            <img class="sec2-3" src="./images2/sec4-12.jpg" alt="" />
+            <div class="circle-color"></div>
+            <div class="sec2-txt1"></div>
+            <div class="sec2-txt2">MagSafe Charger (2 m)</div>
+            <div class="sec2-txt3">$49.00</div>
+          </div>
+          <div class="sec2-item">
+            <img class="sec2-3" src="./images2/sec4-13.jpg" alt="" />
+            <div class="circle-color"></div>
+            <div class="sec2-txt1"></div>
+            <div class="sec2-txt2">40W Dynamic Power Adapter with 60W Max</div>
+            <div class="sec2-txt3">$39.00</div>
+          </div>
+          <div class="sec2-item">
+            <img class="sec2-3" src="./images2/sec4-14.jpg" alt="" />
+            <div class="circle-color"></div>
+            <div class="sec2-txt1"></div>
+            <div class="sec2-txt2">20W USB-C Power Adapter</div>
+            <div class="sec2-txt3">$19.00</div>
+          </div>
+          <div class="sec2-item sec2-4">
+            <img class="sec2-3" src="./images2/sec4-15.jpg" alt="" />
+            <div class="circle-color"></div>
+            <div class="sec2-txt1"></div>
+            <div class="sec2-txt2">iPhone 17 Pro Clear Case with MagSafe</div>
+            <div class="sec2-txt3">$49.00</div>
           </div>
         </div>
       </div>
@@ -401,9 +482,201 @@
           </div>
         </div>
       </div>
-      <div class="section"></div>
-      <div class="section"></div>
-      <div class="section"></div>
+      <div class="section">
+        <div class="title">
+          <div class="title1">The Apple experience.</div>
+          <div class="title2">
+            Do even more with Apple products and services.
+          </div>
+        </div>
+        <div class="scroll">
+          <div class="sec3-item sec5-1">
+            <div class="sec3-txt1"></div>
+            <div class="sec3-txt2">
+              <span class="solongo">Apple Intelligence.</span> <br />
+              Write, express yourself, and get things done effortlessly.
+            </div>
+            <div class="sec3-txt3"></div>
+          </div>
+          <div class="sec3-item sec5-2">
+            <div class="sec3-txt1">CONTINUITY</div>
+            <div class="sec3-txt2">
+              Powerful alone. <br />
+              Superpowered together
+            </div>
+            <div class="sec3-txt3"></div>
+          </div>
+          <div class="sec3-item sec5-3">
+            <div class="sec3-txt1">APPLECARE</div>
+            <div class="sec3-txt2">Handled with Applecare.</div>
+            <div class="sec3-txt3">
+              Protect your products individually with AppleCare+ or multiple
+              products with AppleCare One.
+            </div>
+          </div>
+          <div class="sec3-item sec5-4">
+            <div class="sec3-txt1">APPLE STORE APP</div>
+            <div class="sec3-txt2">Put your bow on it.</div>
+            <div class="sec3-txt3">
+              Make the gift unmistakably theirs with a personalized message
+              created especially for them.
+            </div>
+          </div>
+          <div class="sec3-item sec5-5">
+            <div class="sec3-txt1"></div>
+            <div class="sec3-txt2">
+              Six Apple services. One easy subscription.
+            </div>
+            <div class="sec3-txt3"></div>
+          </div>
+          <div class="sec3-item sec5-6">
+            <div class="sec3-txt1"></div>
+            <div class="sec3-txt2">Discover all the ways to use Apple Pay.</div>
+            <div class="sec3-txt3"></div>
+          </div>
+          <div class="sec3-item sec5-7">
+            <div class="sec3-txt1">HOME</div>
+            <div class="sec3-txt2">
+              See how one app can control your entire home.
+            </div>
+            <div class="sec3-txt3"></div>
+          </div>
+        </div>
+      </div>
+      <div class="section">
+        <div class="title">
+          <div class="title1">Savings and offers.</div>
+          <div class="title2">Exclusive deals, special stores and more.</div>
+        </div>
+        <div class="scroll">
+          <div class="sec6-item sec6-1">
+            <div class="sec3-txt1">CARRIER DEALS AT APPLE</div>
+            <div class="sec3-txt2">
+              Get up to $830–$1100 in credit on a new iPhone.
+            </div>
+            <div class="sec3-txt3">
+              Explore deals that accept eligible trade-in devices in any
+              condition — and some that don’t require a trade-in at all.
+            </div>
+          </div>
+          <div class="sec6-item sec6-2">
+            <div class="sec3-txt1">EDUCATION</div>
+            <div class="sec3-txt2">
+              Buy a new Mac or iPad with education savings.
+            </div>
+            <div class="sec3-txt3"></div>
+          </div>
+          <div class="sec6-item sec6-3">
+            <div class="sec3-txt1">CERTIFIED REFURBISHED</div>
+            <div class="sec3-txt2">
+              Shop refurbished Apple products backed by a one‑year warranty.
+            </div>
+            <div class="sec3-txt3"></div>
+          </div>
+          <div class="sec6-item sec6-4">
+            <div class="sec3-txt1 sec6-txt1">SMALL BUSINESS</div>
+            <div class="sec3-txt2 sec6-txt2">
+              Simple solutions for all the ways you work.
+            </div>
+            <div class="sec3-txt3"></div>
+          </div>
+          <div class="sec6-item sec6-5">
+            <div class="sec3-txt1">GOVERNMENT</div>
+            <div class="sec3-txt2">
+              Special pricing is available for state, local, and federal
+              agencies.
+            </div>
+            <div class="sec3-txt3"></div>
+          </div>
+          <div class="sec6-item sec6-6">
+            <div class="sec3-txt1">VETERANS AND MILITARY</div>
+            <div class="sec3-txt2">
+              Active and veteran members may be eligible for exclusive savings.
+            </div>
+            <div class="sec3-txt3"></div>
+          </div>
+        </div>
+      </div>
+      <div class="section">
+        <div class="sec7-head">Quick Links</div>
+        <div class="sec7-bot">
+          <div class="sec7-txt">
+            <div>Find a Store</div>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="8"
+              height="8"
+              viewBox="0 0 8 8"
+              fill="none"
+            >
+              <path
+                d="M8 5.94625C8 6.12913 7.93951 6.28112 7.81852 6.40222C7.69753 6.52332 7.55309 6.58387 7.38519 6.58387C7.21728 6.58387 7.07531 6.52209 6.95926 6.39852C6.84321 6.27495 6.78518 6.12913 6.78518 5.96108V4.30769L6.88889 1.86098L6.00741 2.86932L1.06667 7.81464C0.933333 7.93821 0.787654 8 0.62963 8C0.461728 8 0.314815 7.93574 0.188889 7.80723C0.062963 7.67871 0 7.5329 0 7.36979C0 7.20667 0.0641975 7.06086 0.192593 6.93234L5.13333 1.98702L6.13333 1.11955L3.66667 1.20853H2.03704C1.86914 1.20853 1.72469 1.15045 1.6037 1.03429C1.48272 0.918134 1.42222 0.778499 1.42222 0.615385C1.42222 0.447328 1.48148 0.30275 1.6 0.18165C1.71852 0.0605497 1.86914 0 2.05185 0H7.34074C7.54321 0 7.7037 0.0605497 7.82222 0.18165C7.94074 0.30275 8 0.459685 8 0.652456V5.94625Z"
+                fill="currentColor"
+              />
+            </svg>
+          </div>
+          <div class="sec7-txt">
+            <div>Order Status</div>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="8"
+              height="8"
+              viewBox="0 0 8 8"
+              fill="none"
+            >
+              <path
+                d="M8 5.94625C8 6.12913 7.93951 6.28112 7.81852 6.40222C7.69753 6.52332 7.55309 6.58387 7.38519 6.58387C7.21728 6.58387 7.07531 6.52209 6.95926 6.39852C6.84321 6.27495 6.78518 6.12913 6.78518 5.96108V4.30769L6.88889 1.86098L6.00741 2.86932L1.06667 7.81464C0.933333 7.93821 0.787654 8 0.62963 8C0.461728 8 0.314815 7.93574 0.188889 7.80723C0.062963 7.67871 0 7.5329 0 7.36979C0 7.20667 0.0641975 7.06086 0.192593 6.93234L5.13333 1.98702L6.13333 1.11955L3.66667 1.20853H2.03704C1.86914 1.20853 1.72469 1.15045 1.6037 1.03429C1.48272 0.918134 1.42222 0.778499 1.42222 0.615385C1.42222 0.447328 1.48148 0.30275 1.6 0.18165C1.71852 0.0605497 1.86914 0 2.05185 0H7.34074C7.54321 0 7.7037 0.0605497 7.82222 0.18165C7.94074 0.30275 8 0.459685 8 0.652456V5.94625Z"
+                fill="currentColor"
+              />
+            </svg>
+          </div>
+          <div class="sec7-txt">
+            <div>Shopping Help</div>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="8"
+              height="8"
+              viewBox="0 0 8 8"
+              fill="none"
+            >
+              <path
+                d="M8 5.94625C8 6.12913 7.93951 6.28112 7.81852 6.40222C7.69753 6.52332 7.55309 6.58387 7.38519 6.58387C7.21728 6.58387 7.07531 6.52209 6.95926 6.39852C6.84321 6.27495 6.78518 6.12913 6.78518 5.96108V4.30769L6.88889 1.86098L6.00741 2.86932L1.06667 7.81464C0.933333 7.93821 0.787654 8 0.62963 8C0.461728 8 0.314815 7.93574 0.188889 7.80723C0.062963 7.67871 0 7.5329 0 7.36979C0 7.20667 0.0641975 7.06086 0.192593 6.93234L5.13333 1.98702L6.13333 1.11955L3.66667 1.20853H2.03704C1.86914 1.20853 1.72469 1.15045 1.6037 1.03429C1.48272 0.918134 1.42222 0.778499 1.42222 0.615385C1.42222 0.447328 1.48148 0.30275 1.6 0.18165C1.71852 0.0605497 1.86914 0 2.05185 0H7.34074C7.54321 0 7.7037 0.0605497 7.82222 0.18165C7.94074 0.30275 8 0.459685 8 0.652456V5.94625Z"
+                fill="currentColor"
+              />
+            </svg>
+          </div>
+          <div class="sec7-txt">
+            <div>Returns</div>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="8"
+              height="8"
+              viewBox="0 0 8 8"
+              fill="none"
+            >
+              <path
+                d="M8 5.94625C8 6.12913 7.93951 6.28112 7.81852 6.40222C7.69753 6.52332 7.55309 6.58387 7.38519 6.58387C7.21728 6.58387 7.07531 6.52209 6.95926 6.39852C6.84321 6.27495 6.78518 6.12913 6.78518 5.96108V4.30769L6.88889 1.86098L6.00741 2.86932L1.06667 7.81464C0.933333 7.93821 0.787654 8 0.62963 8C0.461728 8 0.314815 7.93574 0.188889 7.80723C0.062963 7.67871 0 7.5329 0 7.36979C0 7.20667 0.0641975 7.06086 0.192593 6.93234L5.13333 1.98702L6.13333 1.11955L3.66667 1.20853H2.03704C1.86914 1.20853 1.72469 1.15045 1.6037 1.03429C1.48272 0.918134 1.42222 0.778499 1.42222 0.615385C1.42222 0.447328 1.48148 0.30275 1.6 0.18165C1.71852 0.0605497 1.86914 0 2.05185 0H7.34074C7.54321 0 7.7037 0.0605497 7.82222 0.18165C7.94074 0.30275 8 0.459685 8 0.652456V5.94625Z"
+                fill="currentColor"
+              />
+            </svg>
+          </div>
+          <div class="sec7-txt">
+            <div>Your Saves</div>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="8"
+              height="8"
+              viewBox="0 0 8 8"
+              fill="none"
+            >
+              <path
+                d="M8 5.94625C8 6.12913 7.93951 6.28112 7.81852 6.40222C7.69753 6.52332 7.55309 6.58387 7.38519 6.58387C7.21728 6.58387 7.07531 6.52209 6.95926 6.39852C6.84321 6.27495 6.78518 6.12913 6.78518 5.96108V4.30769L6.88889 1.86098L6.00741 2.86932L1.06667 7.81464C0.933333 7.93821 0.787654 8 0.62963 8C0.461728 8 0.314815 7.93574 0.188889 7.80723C0.062963 7.67871 0 7.5329 0 7.36979C0 7.20667 0.0641975 7.06086 0.192593 6.93234L5.13333 1.98702L6.13333 1.11955L3.66667 1.20853H2.03704C1.86914 1.20853 1.72469 1.15045 1.6037 1.03429C1.48272 0.918134 1.42222 0.778499 1.42222 0.615385C1.42222 0.447328 1.48148 0.30275 1.6 0.18165C1.71852 0.0605497 1.86914 0 2.05185 0H7.34074C7.54321 0 7.7037 0.0605497 7.82222 0.18165C7.94074 0.30275 8 0.459685 8 0.652456V5.94625Z"
+                fill="currentColor"
+              />
+            </svg>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
