--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="nav">
       <img src="./images/applelogo.svg" alt="" />
       <div class="nav-menu">
-        <a href="./store.html"><div>Store</div></a>
+        <a href="./store.html" target="_blank"><div>Store</div></a>
         <div>Mac</div>
         <div>Ipad</div>
         <div>Iphone</div>
